...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="mY7-Xv-A6n" id="yrx-37-L2e"/>
                            <outlet property="delegate" destination="mY7-Xv-A6n" id="tds-50-bPe"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Shop" id="3zy-H0-Rdh">
                        <barButtonItem key="rightBarButtonItem" title="Basket" id="Hch-OZ-5xb">
                            <connections>
                                <segue destination="pXU-D6-dKP" kind="show" identifier="showBasket" id="1zX-uM-T1d"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
...
                            <outlet property="dataSource" destination="pXU-D6-dKP" id="cHZ-Ej-K65"/>
                            <outlet property="delegate" destination="pXU-D6-dKP" id="jWY-Gz-Tm0"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Basket" id="mNw-uk-fFT">
                        <barButtonItem key="rightBarButtonItem" title="Checkout" id="V6g-yg-fLC">
                            <connections>
                                <segue destination="4ED-b4-Gm5" kind="show" identifier="showCheckout" id="QW1-oS-fQV"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
