...
    func configureCell(_ cell: UITableViewCell, basketItemViewData: BasketItemViewData, index:Int) {
        cell.isAccessibilityElement = true // Required for UI Test recording.
        cell.textLabel!.text = "\(basketItemViewData.name) : \(basketItemViewData.description)"
        cell.detailTextLabel!.text = Common.formatCurrency(number: basketItemViewData.price, code: Global.defaultBaseCurrency, locale:Locale.current)
        
        let removeButton = UIButton(frame: CGRect(x: 0, y: 0, width: 80, height: 30))
        removeButton.setTitle("Remove", for: .normal)
        removeButton.setTitleColor(UIColor.blue, for: .normal)
        removeButton.addTarget(self, action: #selector(removeButtonPressed), for: .touchUpInside)
        removeButton.tag = index
        cell.accessoryView = removeButton
    }
    
...
